--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -146,6 +146,7 @@
     position: absolute;
     top: 0;
     // left: 0;
+    scale: 1;
     width: 100%;
     height: 100vh;
     background: radial-gradient(circle at 50% 0, rgb(15 15 15) 10%, rgba(0, 0, 0, 0) 50%);
